--- a/package.json
+++ b/package.json
@@ -23,8 +23,15 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@octokit/rest": "^22.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "electron-store": "^10.1.0",
     "electron-updater": "^6.3.9",
-    "text-to-image": "^7.0.1"
+    "lucide-react": "^0.525.0",
+    "tailwind-merge": "^3.3.1",
+    "text-to-image": "^7.0.1",
+    "tw-animate-css": "^1.3.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
