--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@octokit/rest": "^22.0.0",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "electron-store": "^10.1.0",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.525.0",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
     "text-to-image": "^7.0.1",
     "tw-animate-css": "^1.3.5"
   },
@@ -49,7 +52,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.8.3",
