--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,12 +4,19 @@
     "electron.vite.config.*",
     "src/main/**/*",
     "src/preload/**/*",
+    "src/shared/**/*",
     "lib/**/*"
+
   ],
   "compilerOptions": {
     "composite": true,
     "types": [
       "electron-vite/node"
-    ]
+    ],
+    "paths": {
+      "@shared/*": [
+        "src/shared/*"
+      ]
+    }
   }
 }
