Update dependencies and refactor import paths
Added new dependencies (`pouchdb`, `electron-json-storage`, etc.) to enhance functionality. Also, adjusted import paths in `TrayService.ts` to ensure proper asset referencing. This update sets the stage for more reliable and scalable features.

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -9,6 +9,7 @@
 
   ],
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "composite": true,
     "types": [
       "electron-vite/node"
