--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/pouchdb": "^6.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
+    "electron-json-storage": "^4.6.0",
     "electron-oauth2": "^3.0.0",
     "electron-store": "^10.1.0",
     "electron-updater": "^6.3.9",
     "github-api": "^3.4.0",
     "lucide-react": "^0.525.0",
+    "pouchdb": "^9.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "text-to-image": "^7.0.1",
@@ -44,6 +47,7 @@
   "devDependencies": {
     "@electron-toolkit/eslint-config-ts": "^3.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@types/electron-json-storage": "^4.5.4",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
