--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "github-api": "^3.4.0",
     "lucide-react": "^0.525.0",
     "pouchdb": "^9.0.0",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "text-to-image": "^7.0.1",
