--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@octokit/auth-app": "^8.0.2",
+    "@octokit/auth-oauth-device": "^8.0.1",
     "@octokit/rest": "^22.0.0",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -37,6 +38,7 @@
     "electron-store": "^10.1.0",
     "electron-updater": "^6.3.9",
     "github-api": "^3.4.0",
+    "keytar": "^7.9.0",
     "lucide-react": "^0.525.0",
     "pouchdb": "^9.0.0",
     "react-use": "^17.6.0",
