Refactor imports, paths, and UI components
- Removed unused imports from various files (`Trash`, `app`).
- Updated TypeScript path aliases in `tsconfig` files for consistency.
- Adjusted rendering logic in `WorkflowList` for style consistency.
- Added `@ts-ignore` comments to handle TypeScript checks for specific cases.
- Minor updates to build configuration (`electron.vite.config.ts`).

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -13,10 +13,10 @@
     "baseUrl": ".",
     "paths": {
       "@shared/*": [
-        "src/shared/*"
+        "./src/shared/*"
       ],
       "@renderer/*": [
-        "src/renderer/src/*"
+        "./src/renderer/src/*"
       ]
     }
   }
