--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/index.js",
   "author": "example.com",
-  "homepage": "https://electron-vite.org",
+  "homepage": "https://github.com/faebeee/gh-status-tray",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
